feat: add CompiledNetExecutor — a Petri net VM with 2.5x speedup
Compiles a PetriNet into a NetProgram of flat-array microprograms and
executes transitions via opcode dispatch, eliminating virtual dispatch,
HashMap lookups, and priority sorting from the hot path.

Key optimizations over BitmapNetExecutor:
- Ring buffer token storage indexed by place ID (O(1), no hashing)
- Microprogram execution (int[] opcodes replace sealed-type matching)
- Priority-partitioned ready queues (O(1) next-to-fire selection)
- Two-level summary bitmaps for dirty/enabled set iteration
- Sparse enablement masks (single-word fast path, multi-word sparse)
- Pooled TransitionContext/TokenInput/TokenOutput (zero per-firing allocs)
- Raw long[] pending reset detection (replaces BitSet)

Includes JMH benchmarks for sync/async/fan-out/mixed chains at
1k/2k/5k/10k transitions. 136 tests via abstract base classes provide
identical coverage to BitmapNetExecutor.